--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,103 +7,115 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <EditText
-                android:id="@+id/database_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Database Name"
-                android:inputType="textPersonName"/>
+            <EditText
+                    android:id="@+id/database_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Database Name"
+                    android:inputType="textPersonName"/>
 
-        <EditText
-                android:id="@+id/protocol"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Protocol"
-                android:inputType="textPersonName"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="46dp"/>
+            <EditText
+                    android:id="@+id/protocol"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Protocol"
+                    android:inputType="textPersonName"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="46dp"/>
 
-        <EditText
-                android:id="@+id/hostname"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Host"
-                android:inputType="textPersonName"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="92dp"/>
+            <EditText
+                    android:id="@+id/hostname"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Host"
+                    android:inputType="textPersonName"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="92dp"/>
 
-        <EditText
-                android:id="@+id/port"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Port"
-                android:inputType="number"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="138dp"/>
+            <EditText
+                    android:id="@+id/port"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Port"
+                    android:inputType="number"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="138dp"/>
 
-        <EditText
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Username"
-                android:inputType="textPersonName"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="184dp"/>
+            <EditText
+                    android:id="@+id/username"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Username"
+                    android:inputType="textPersonName"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="184dp"/>
 
-        <EditText
-                android:id="@+id/password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Password"
-                android:inputType="textPassword"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="230dp"/>
+            <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="230dp"/>
 
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/generator_float_hours" android:hint="Generator Float Hours"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/initial_request_timeout" android:hint="Initial Timeout (seconds)"/>
-        <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:ems="10"
-                android:id="@+id/subsequent_request_timeout" android:hint="Update Period and Timeout (seconds)"/>
-        <Button
-            android:id="@+id/save_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="saveSettings"
-            android:text="Save"
-            tools:layout_editor_absoluteX="57dp"
-            tools:layout_editor_absoluteY="276dp" />
-        <Button
-                android:text="Restart Service"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/restart_button" android:onClick="restartService"/>
-        <Button
-                android:text="Stop Service"
-                android:layout_width="143dp"
-                android:layout_height="wrap_content" android:id="@+id/stop_button" android:onClick="stopService"/>
-    </LinearLayout>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/generator_float_hours" android:hint="Generator Float Hours"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/virtual_float_mode_minimum_battery_voltage"
+                    android:hint="Virtual Float Mode Minimum Battery Voltage"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:ems="10"
+                    android:id="@+id/initial_request_timeout" android:hint="Initial Timeout (seconds)"/>
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:ems="10"
+                    android:id="@+id/subsequent_request_timeout" android:hint="Update Period and Timeout (seconds)"/>
+            <Button
+                    android:id="@+id/save_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="saveSettings"
+                    android:text="Save"
+                    tools:layout_editor_absoluteX="57dp"
+                    tools:layout_editor_absoluteY="276dp"/>
+            <Button
+                    android:text="Restart Service"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/restart_button"
+                    android:onClick="restartService"/>
+            <Button
+                    android:text="Stop Service"
+                    android:layout_width="143dp"
+                    android:layout_height="wrap_content" android:id="@+id/stop_button" android:onClick="stopService"/>
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
