--- a/app/src/main/res/layout/activity_command.xml
+++ b/app/src/main/res/layout/activity_command.xml
@@ -60,6 +60,25 @@
                     android:text="Send Command"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/button6" android:onClick="sendCommand"/>
+            <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="100px"/>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <TextView
+                        android:text="Current Task:"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/current_task" android:layout_weight="1"/>
+            </LinearLayout>
+            <Button
+                    android:text="Cancel Current Task"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button3" android:onClick="cancelCurrentTask"/>
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
