--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
@@ -15,39 +14,44 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                <TextView
-                        android:text="Connection Profile"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>
-                <Spinner
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" android:id="@+id/connection_profile_spinner" android:layout_weight="1"/>
-                <Button
-                        android:text="New Profile"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" android:id="@+id/new_connection_profile_button"
-                        android:layout_weight="1" android:onClick="newConnectionProfile"/>
-            </LinearLayout>
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPersonName"
-                        android:ems="10"
-                        android:id="@+id/connection_profile_name" android:hint="Connection Profile Name"/>
-                <Button
-                        android:text="Delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/delete_profile_button"
-                        android:layout_weight="1" android:onClick="deleteCurrentConnectionProfile"/>
-            </LinearLayout>
+            <!--<LinearLayout-->
+                    <!--android:orientation="horizontal"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent">-->
+                <!--<TextView-->
+                        <!--android:text="Connection Profile"-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>-->
+                <!--<Spinner-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="wrap_content" android:id="@+id/connection_profile_spinner" android:layout_weight="1"/>-->
+                <!--<Button-->
+                        <!--android:text="New Profile"-->
+                        <!--android:layout_width="0dp"-->
+                        <!--android:layout_height="wrap_content" android:id="@+id/new_connection_profile_button"-->
+                        <!--android:layout_weight="1" android:onClick="newConnectionProfile"/>-->
+            <!--</LinearLayout>-->
+            <!--<LinearLayout-->
+                    <!--android:orientation="horizontal"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="match_parent">-->
+                <!--<EditText-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:inputType="textPersonName"-->
+                        <!--android:ems="10"-->
+                        <!--android:id="@+id/connection_profile_name" android:hint="Connection Profile Name"/>-->
+                <!--<Button-->
+                        <!--android:text="Delete"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content" android:id="@+id/delete_profile_button"-->
+                        <!--android:layout_weight="1" android:onClick="deleteCurrentConnectionProfile"/>-->
+            <!--</LinearLayout>-->
+            <include
+                android:id="@+id/connection_profile_header_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/profile_header"/>
             <EditText
                     android:id="@+id/protocol"
                     android:layout_width="match_parent"
@@ -64,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="host1,host2,host3,etc"
-                    android:inputType="textPersonName"
+                    android:inputType="textUri"
                     tools:layout_editor_absoluteX="0dp"
                     tools:layout_editor_absoluteY="92dp"/>
 
