Solar settings profile working

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,6 +124,12 @@
             <Space
                     android:layout_width="match_parent"
                     android:layout_height="20dp"/>
+
+            <include
+                    android:id="@+id/solar_profile_header_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    layout="@layout/profile_header"/>
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
