Auto network profile switching working, fixed bug when reloading profile spinner

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,44 +14,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <!--<LinearLayout-->
-                    <!--android:orientation="horizontal"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent">-->
-                <!--<TextView-->
-                        <!--android:text="Connection Profile"-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="1"/>-->
-                <!--<Spinner-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="wrap_content" android:id="@+id/connection_profile_spinner" android:layout_weight="1"/>-->
-                <!--<Button-->
-                        <!--android:text="New Profile"-->
-                        <!--android:layout_width="0dp"-->
-                        <!--android:layout_height="wrap_content" android:id="@+id/new_connection_profile_button"-->
-                        <!--android:layout_weight="1" android:onClick="newConnectionProfile"/>-->
-            <!--</LinearLayout>-->
-            <!--<LinearLayout-->
-                    <!--android:orientation="horizontal"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent">-->
-                <!--<EditText-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:inputType="textPersonName"-->
-                        <!--android:ems="10"-->
-                        <!--android:id="@+id/connection_profile_name" android:hint="Connection Profile Name"/>-->
-                <!--<Button-->
-                        <!--android:text="Delete"-->
-                        <!--android:layout_width="wrap_content"-->
-                        <!--android:layout_height="wrap_content" android:id="@+id/delete_profile_button"-->
-                        <!--android:layout_weight="1" android:onClick="deleteCurrentConnectionProfile"/>-->
-            <!--</LinearLayout>-->
             <include
                 android:id="@+id/connection_profile_header_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 layout="@layout/profile_header"/>
+            <include
+                    android:id="@+id/network_switching"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    layout="@layout/network_switching_config"/>
             <EditText
                     android:id="@+id/protocol"
                     android:layout_width="match_parent"
@@ -168,6 +140,10 @@
                     android:text="Start on boot"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/start_on_boot"/>
+            <CheckBox
+                    android:text="Auto Network Switching Enable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/network_switching_enabled"/>
             <Button
                     android:id="@+id/save_button"
                     android:layout_width="wrap_content"
