--- a/app/src/main/res/layout/content_event_display.xml
+++ b/app/src/main/res/layout/content_event_display.xml
@@ -8,10 +8,12 @@
     tools:context=".EventDisplayActivity"
     tools:showIn="@layout/activity_event_display">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="Test text" />
+<!--    We'll need this later: https://stackoverflow.com/questions/16699772/scrollview-can-host-only-one-direct-child-->
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/events_display_recycler_view"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 </androidx.core.widget.NestedScrollView>
