--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--        android:layout_width="match_parent" android:layout_height="match_parent">-->
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +6,8 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".SettingsActivity"
-        tools:showIn="@layout/activity_settings">
+        tools:showIn="@layout/activity_settings"
+        android:id="@+id/settings_root_view">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -97,7 +95,7 @@
                 android:id="@+id/subsequent_request_timeout" android:hint="Update Period and Timeout (seconds)"/>
         <Space
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="50dp"/>
 
         <include
                 android:layout_width="match_parent"
@@ -136,9 +134,15 @@
         <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/battery_type_spinner"/>
+        <Button
+                android:text="Edit Temperature Notify"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/edit_temperature_notify_button"
+                android:onClick="openTemperatureNotifySettings"
+                />
         <Space
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="50dp"/>
         <include
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -178,7 +182,7 @@
                 layout="@layout/horizontal_rule"/>
         <Space
                 android:layout_width="match_parent"
-                android:layout_height="20dp"/>
+                android:layout_height="50dp"/>
         <Button
                 android:text="Restart Service"
                 android:layout_width="wrap_content"
