--- a/app/src/main/res/layout/activity_command.xml
+++ b/app/src/main/res/layout/activity_command.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".CommandActivity">
+        tools:context=".activity.CommandActivity">
 
     <include layout="@layout/toolbar_layout" />
     <include layout="@layout/content_command" />
