--- a/app/src/main/res/layout/activity_event_display.xml
+++ b/app/src/main/res/layout/activity_event_display.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".EventDisplayActivity">
+    tools:context=".activity.EventDisplayActivity">
 
     <include layout="@layout/toolbar_layout" />
 
