--- a/app/src/main/res/layout/content_command.xml
+++ b/app/src/main/res/layout/content_command.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".CommandActivity"
+        tools:context=".activity.CommandActivity"
         tools:showIn="@layout/activity_command">
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
             android:orientation="vertical">
