--- a/app/src/main/res/menu/menu_event_display.xml
+++ b/app/src/main/res/menu/menu_event_display.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="me.retrodaredevil.solarthing.android.EventDisplayActivity">
+    tools:context="me.retrodaredevil.solarthing.android.activity.EventDisplayActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
