--- a/app/src/main/res/layout/content_command.xml
+++ b/app/src/main/res/layout/content_command.xml
@@ -54,6 +54,10 @@
                 android:text="Commands"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+        <Button
+                android:text="Refresh"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:onClick="refresh"/>
         <Spinner
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/command_fragment_spinner"/>
