--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -93,6 +93,22 @@
                 android:inputType="number"
                 android:ems="10"
                 android:id="@+id/subsequent_request_timeout" android:hint="Update Period and Timeout (seconds)"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_weight=".5"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:ems="10"
+                    android:id="@+id/preferred_source_id" android:hint="Preferred Source ID"/>
+            <Spinner
+                    android:layout_width="0dp"
+                    android:layout_weight=".5"
+                    android:layout_height="wrap_content" android:id="@+id/preferred_source_id_spinner"/>
+        </LinearLayout>
         <Space
                 android:layout_width="match_parent"
                 android:layout_height="50dp"/>
@@ -106,19 +122,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 layout="@layout/profile_header"/>
-<!--        <EditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="numberDecimal"-->
-<!--                android:ems="10"-->
-<!--                android:id="@+id/voltage_timer_hours" android:hint="Voltage Timer Hours"/>-->
-<!--        <EditText-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="numberDecimal"-->
-<!--                android:ems="10"-->
-<!--                android:id="@+id/voltage_timer_battery_voltage"-->
-<!--                android:hint="Voltage Timer Battery Voltage"/>-->
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
